--- a/app/Resources/views/admin/bookings/view.html.twig
+++ b/app/Resources/views/admin/bookings/view.html.twig
@@ -9,18 +9,34 @@
         <p>Payment: {{ booking.payment.name }}</p>
         <p>Total Amount: {{ booking.totalAmount}} | Paid Amount: {{ booking.paidAmount}} | Payment Amount: {{ booking.paymentAmount}}</p>
         <p>Category: <span class="cl-bold"> {{ booking.category.name }} </span> | Adults: <span class="cl-bold"> {{ booking.adults}} </span> | Child Bed: <span class="cl-bold"> {{ booking.childBed}} </span></p>
-        <h2>All stays</h2>
+        <p>
+            <a class="btn btn-success btn-xs" href="{{ path('admin_booking_edit', {id: booking.id}) }}">Edit Booking</a>
+            <a class="btn btn-danger btn-xs" href="{{ path('admin_booking_delete', {id: booking.id}) }}">Delete Booking</a>
+        </p>
+        <h2>All stays for this booking</h2>
         {% if stays|length == 0 %} 
             <p>No result for stays</p>
         {% endif %} 
-        <hr />
-        {% for stay in stays %}
-            <p>Stay Id: {{ stay.id }} | Room number: <span class="cl-bold">{{ stay.room }}</span> | <a href="{{ path('admin_guest_view', {id: stay.guest.id}) }}"> {{ stay.guest.firstname }} {{ stay.guest.fathersName }} {{ stay.guest.lastname }} </a></p>      
-            <hr />
-        {% endfor %}
-        <a class="btn btn-success btn-xs" href="{{ path('admin_booking_edit', {id: booking.id}) }}">Edit</a>
-        <a class="btn btn-danger btn-xs" href="{{ path('admin_booking_delete', {id: booking.id}) }}">Delete</a>
-        <a class="btn btn-primary btn-xs" href="{{ path('admin_bookings') }}">Back &raquo;</a>
+        <div class="row">
+            <table class="table table-striped table-hover ">
+                <thead>
+                    <tr>
+                        <th>Stay Id</th>
+                        <th>Number</th>
+                        <th>Guest</th> 
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for stay in stays %}
+                        <tr>
+                            <td><a href="{{ path('admin_stay_view', {id: stay.id}) }}"> {{ stay.id }} </a></td>
+                            <td>{{ stay.room }}</td>
+                            <td><a href="{{ path('admin_guest_view', {id: stay.guest.id}) }}"> {{ stay.guest.firstname }} {{ stay.guest.fathersName }} {{ stay.guest.lastname }} </a></td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>       
     </div>
 
 {% endblock %}
