--- a/app/Resources/views/offers/view.html.twig
+++ b/app/Resources/views/offers/view.html.twig
@@ -38,7 +38,7 @@
                     <div class="offers-info text-right">
                         <h4>Business and family events</h4>
                         <p>01 January 2021 - 31 December 2021</p>
-                        <p>Offer from for organizing your event</p>
+                        <p>Offer for organizing your event</p>
                         <p><a href="{{ path('view_contact') }}">For info and reservation</a></p>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
                     <div class="offers-info text-right">
                         <h4>Wedding celebration</h4>
                         <p>01 May 2021 - 30 Sep 2021</p>
-                        <p>Offer from for organizing your wedding</p>
+                        <p>Offer for organizing your wedding</p>
                         <p><a href="{{ path('view_contact') }}">For info and reservation</a></p>
                     </div>
                 </div>
