--- a/app/Resources/views/admin/bookings/edit.html.twig
+++ b/app/Resources/views/admin/bookings/edit.html.twig
@@ -17,43 +17,36 @@
 
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_checkin">Checkin</label>
-                        <div class="col-sm-4 ">
+                        <div class="col-sm-4">
                             <input type="date" class="form-control" id="booking_checkin"  name="booking[checkin]"  value="{{ booking.checkin|date("Y-m-d") }}">
                         </div>
                     </div>
 
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_checkout">Checkout</label>
-                        <div class="col-sm-4 ">
+                        <div class="col-sm-4">
                             <input type="date" class="form-control" id="booking_checkout"  name="booking[checkout]"  value="{{ booking.checkout|date("Y-m-d")}}">
                         </div>
                     </div>
 
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_days">Days</label>
-                        <div class="col-sm-4 ">
+                        <div class="col-sm-4">
                             <input type="number" class="form-control" id="booking_days"  name="booking[days]" value="{{ booking.days}}">
                         </div>
                     </div>
 
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_adults">Adults</label>
-                        <div class="col-sm-4 ">
+                        <div class="col-sm-4">
                             <input type="number" class="form-control" id="booking_adults"  name="booking[adults]" value="{{ booking.adults}}">
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <label class="col-sm-4 control-label" for="booking_adults">Child Bed</label>
-                        <div class="col-sm-4 ">
+                        <label class="col-sm-4 control-label" for="booking_childBed">Child Bed</label>
+                        <div class="col-sm-4">
                             <input type="number" class="form-control" id="booking_childBed"  name="booking[childBed]" value="{{ booking.childBed}}">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="booking_totalAmount">Total Amount</label>
-                        <div class="col-sm-4 ">
-                            <input type="number" class="form-control" id="booking_totalAmount"  name="booking[totalAmount]" value="{{ booking.totalAmount}}">
                         </div>
                     </div>
 
@@ -66,15 +59,8 @@
 
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_paidAmount">Paid Amount</label>
-                        <div class="col-sm-4 ">
-                            <input type="number" class="form-control" id="booking_paidAmount"  name="booking[paidAmount]" value="{{ booking.paidAmount}}">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="booking_paymentAmount">Payment Amount</label>
-                        <div class="col-sm-4 ">
-                            <input type="number" class="form-control" id="booking_paymentAmount"  name="booking[paymentAmount]" value="{{ booking.paymentAmount}}">
+                        <div class="col-sm-4">
+                            <input type="number" class="form-control" id="booking_paidAmount"  name="booking[paidAmount]" value="{{ booking.paidAmount }}">
                         </div>
                     </div>
 
