--- a/app/Resources/views/admin/stays/view.html.twig
+++ b/app/Resources/views/admin/stays/view.html.twig
@@ -6,12 +6,10 @@
         <h2>Stay Information</h2>
         <p>Booking Id: <a href="{{ path('admin_booking_view', {id: stay.booking.id}) }}">{{ stay.booking.id }} </a></p>
         <p>Guest: <a href="{{ path('admin_guest_view', {id: stay.guest.id}) }}"> {{ stay.guest.firstname }} {{ stay.guest.fathersName }} {{ stay.guest.lastname }} </a></p>
-        <p>Category: {{ stay.room.category }}</p>
-        <p>Number: {{ stay.room }}</p>
+        <p>Room Number: <a href="{{ path('admin_room_view', {id: stay.room.id}) }}"> {{ stay.room }} </a></p>
         <p>
             <a class="btn btn-success btn-xs" href="{{ path('admin_stay_edit', {id: stay.id}) }}">Edit</a>
             <a class="btn btn-danger btn-xs" href="{{ path('admin_stay_delete', {id: stay.id}) }}">Delete</a>
-            <a class="btn btn-primary btn-xs" href="{{ path('admin_stays') }}">Back  &raquo;</a>
         </p>
     </div>
     
