--- a/app/Resources/views/admin/bookings/view.html.twig
+++ b/app/Resources/views/admin/bookings/view.html.twig
@@ -18,11 +18,11 @@
             <p>No result for stays</p>
         {% endif %} 
         <div class="row">
-            <table class="table table-striped table-hover ">
+            <table class="table table-striped table-hover">
                 <thead>
                     <tr>
                         <th>Stay Id</th>
-                        <th>Number</th>
+                        <th>Room Number</th>
                         <th>Guest</th> 
                     </tr>
                 </thead>
@@ -30,7 +30,7 @@
                     {% for stay in stays %}
                         <tr>
                             <td><a href="{{ path('admin_stay_view', {id: stay.id}) }}"> {{ stay.id }} </a></td>
-                            <td>{{ stay.room }}</td>
+                            <td><a href="{{ path('admin_room_view', {id:  stay.room.id}) }}"> {{ stay.room }} </a></td>
                             <td><a href="{{ path('admin_guest_view', {id: stay.guest.id}) }}"> {{ stay.guest.firstname }} {{ stay.guest.fathersName }} {{ stay.guest.lastname }} </a></td>
                         </tr>
                     {% endfor %}
