--- a/app/Resources/views/admin/guests/view.html.twig
+++ b/app/Resources/views/admin/guests/view.html.twig
@@ -5,19 +5,30 @@
     <div class="container body-content text-center">
         <h2>{{ guest.firstName }} {{ guest.fathersName }} {{ guest.lastName }} {{ guest.personalNumber }}</h2>
         <h4>Email: {{ guest.email }} | Phone: {{ guest.phone }}</h4>
-        <h2>All stays</h2>
+        <h2>All stays for this guest</h2>
         {% if stays|length == 0 %} 
             <p>No result for stays</p>
         {% endif %} 
-        <hr />
-        {% for stay in stays %}
-            <p><a href="{{ path('admin_stay_view', {id: stay.id}) }}">Stay Id: {{ stay.id }}</a> | {{ stay.room }} - {{ stay.room.category }}</p>        
-            <p><a href="{{ path('admin_booking_view', {id: stay.booking.id}) }}">Booking Id: {{ stay.booking }}</a> | Checkin: {{ stay.booking.checkin|date("Y-m-d") }} | Checkout: {{ stay.booking.checkout|date("Y-m-d") }} </p>
-            <hr />
-        {% endfor %}
-        <a class="btn btn-success btn-xs" href="{{ path('admin_guest_edit', {id: guest.id}) }}">Edit</a>
-        <a class="btn btn-danger btn-xs" href="{{ path('admin_guest_delete', {id: guest.id}) }}">Delete</a>
-        <a class="btn btn-primary btn-xs" href="{{ path('admin_guests') }}">Back &raquo;</a>
+        <div class="row">
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th>Stay Id</th>
+                        <th>Room Number</th>
+                        <th>Booking</th> 
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for stay in stays %}
+                        <tr>
+                            <td><a href="{{ path('admin_stay_view', {id: stay.id}) }}"> {{ stay.id }} </a></p>        
+                            <td><a href="{{ path('admin_room_view', {id:  stay.room.id}) }}"> {{ stay.room }} </a></td>
+                            <td><a href="{{ path('admin_booking_view', {id: stay.booking.id}) }}"> {{ stay.booking }} </a></p>
+                        </tr>
+                   {% endfor %}
+                </tbody>
+            </table>
+        </div>        
     </div>
 
 {% endblock %}
