add form find room, add js form in booking, edit set days in BookingService

--- a/app/Resources/views/admin/bookings/list.html.twig
+++ b/app/Resources/views/admin/bookings/list.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
     <div class="container body-content">
-        <div class="row find-guest">
+        <div class="row find-booking">
             <div class="col-md-8">
                 <h2>All Booking -
                     <a href="{{ path('admin_booking_create') }}" class="btn btn-danger">Create Booking</a>
