--- a/app/Resources/views/admin/bookings/view.html.twig
+++ b/app/Resources/views/admin/bookings/view.html.twig
@@ -5,7 +5,7 @@
     <div class="container body-content text-center">
         <h2>Booking Information [status: {{ booking.status.name }}]</h2>
         <p>Reserved by email <span class="cl-bold"> {{ booking.userId.email}} </span> on <span class="cl-bold"> {{ booking.dateAdded|date("Y-m-d H:i:s") }} </span></p>
-        <p>Checkin: {{ booking.checkin|date("Y-m-d") }} | Checkout: {{ booking.checkout|date("Y-m-d") }} </p>
+        <p>Checkin: {{ booking.checkin|date("Y-m-d") }} | Checkout: {{ booking.checkout|date("Y-m-d") }} | {{ booking.days }} day(s)</p>
         <p>Payment: {{ booking.payment.name }}</p>
         <p>Total Amount: ${{ booking.totalAmount}} | Paid Amount: ${{ booking.paidAmount}} | Payment Amount: ${{ booking.paymentAmount}}</p>
         <p>Category: <span class="cl-bold"> {{ booking.category.name }} </span> | Adults: <span class="cl-bold"> {{ booking.adults}} </span> | Child Bed: <span class="cl-bold"> {{ booking.childBed}} </span></p>
@@ -13,20 +13,24 @@
             <a class="btn btn-success btn-xs" href="{{ path('admin_booking_edit', {id: booking.id}) }}">Edit Booking</a>
             <a class="btn btn-danger btn-xs" href="{{ path('admin_booking_delete', {id: booking.id}) }}">Delete Booking</a>
         </p>
+        
+       <h4><button class="btn btn-danger btn-outline" id="Add">Add stay for this booking</button></h4>
+       <div id="stay"></div> 
+        
         <h2>All stays for this booking</h2>
         {% if stays|length == 0 %} 
             <p>No result for stays</p>
-        {% endif %} 
-        <div class="row">
-            <table class="table table-striped table-hover">
-                <thead>
+        {% else %} 
+            <div class="row">
+                <table class="table table-striped table-hover">
+                    <thead>
                     <tr>
                         <th>Stay Id</th>
                         <th>Room Number</th>
                         <th>Guest</th> 
                     </tr>
-                </thead>
-                <tbody>
+                    </thead>
+                    <tbody>
                     {% for stay in stays %}
                         <tr>
                             <td><a href="{{ path('admin_stay_view', {id: stay.id}) }}"> {{ stay.id }} </a></td>
@@ -34,9 +38,45 @@
                             <td><a href="{{ path('admin_guest_view', {id: stay.guest.id}) }}"> {{ stay.guest.firstname }} {{ stay.guest.fathersName }} {{ stay.guest.lastname }} </a></td>
                         </tr>
                     {% endfor %}
-                </tbody>
-            </table>
-        </div>       
+                    </tbody>
+                </table>
+            </div>
+        {% endif %}       
     </div>
+    
+    <script>
+        $('#Add').click(function () {
+            $('#stay').empty();
+            let stayForm =
+                `
+                <form method="post" action="{{ path('admin_stay_create', { id: booking.id}) }}">
+                    <div class="form-group">
+                        <div class="col-md-12">
+                            {{ form_widget(form.room) }}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-12">
+                            {{ form_widget(form.guest) }}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-12">
+                            <input type="text" class="form-control" id="stay_note" placeholder="Note" name="stay[note]" required>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-12">
+                            <h4><button type="submit" class="btn btn-primary">Submit</button></h4>
+                        </div>
+                    </div>
+                    {{  form_row(form._token) }}
+                </form>
+                `;
+                
+            $('#stay').append(stayForm);
+            $('#stay').toggle();
+        })
+    </script>
 
 {% endblock %}
