--- a/app/Resources/views/admin/guests/view.html.twig
+++ b/app/Resources/views/admin/guests/view.html.twig
@@ -5,20 +5,24 @@
     <div class="container body-content text-center">
         <h2>{{ guest.firstName }} {{ guest.fathersName }} {{ guest.lastName }} {{ guest.personalNumber }}</h2>
         <h4>Email: {{ guest.email }} | Phone: {{ guest.phone }}</h4>
+        <p>
+            <a class="btn btn-success btn-xs" href="{{ path('admin_guest_edit', {id: guest.id}) }}">Edit Guest</a>
+            <a class="btn btn-danger btn-xs" href="{{ path('admin_guest_delete', {id: guest.id}) }}">Delete Guest</a>
+        </p>
         <h2>All stays for this guest</h2>
         {% if stays|length == 0 %} 
             <p>No result for stays</p>
-        {% endif %} 
-        <div class="row">
-            <table class="table table-striped table-hover">
-                <thead>
+        {% else %} 
+            <div class="row">
+                <table class="table table-striped table-hover">
+                    <thead>
                     <tr>
                         <th>Stay Id</th>
                         <th>Room Number</th>
                         <th>Booking</th> 
                     </tr>
-                </thead>
-                <tbody>
+                    </thead>
+                    <tbody>
                     {% for stay in stays %}
                         <tr>
                             <td><a href="{{ path('admin_stay_view', {id: stay.id}) }}"> {{ stay.id }} </a></p>        
@@ -26,9 +30,10 @@
                             <td><a href="{{ path('admin_booking_view', {id: stay.booking.id}) }}"> {{ stay.booking }} </a></p>
                         </tr>
                    {% endfor %}
-                </tbody>
-            </table>
-        </div>        
+                    </tbody>
+                </table>
+            </div> 
+        {% endif %}      
     </div>
 
 {% endblock %}
