--- a/app/Resources/views/admin/rooms/view.html.twig
+++ b/app/Resources/views/admin/rooms/view.html.twig
@@ -4,8 +4,9 @@
 
     <div class="container body-content text-center">
         <h2>Room Information</h2>
-        <p> {{ room.number }} | {{ room.category }} | ${{ room.category.price }} </p>
-        <p> Description: {{ room.category.description }} </p>
+        <p>Number: {{ room.number }} - {{ room.category }} </p>
+        <p>Beds: {{ room.category.beds }} | Price: ${{ room.category.price }} </p>
+        <p>Description: {{ room.category.description }} </p>
         <p>
             <a class="btn btn-success btn-xs" href="{{ path('admin_room_edit', {id: room.id}) }}">Edit Room</a>
             <a class="btn btn-danger btn-xs" href="{{ path('admin_room_delete', {id: room.id}) }}">Delete Room</a>
@@ -13,17 +14,17 @@
         <h2>All stays for this room</h2>
         {% if stays|length == 0 %} 
             <p>No result for stays</p>
-        {% endif %} 
-        <div class="row">
-            <table class="table table-striped table-hover ">
-                <thead>
+        {% else %} 
+            <div class="row">
+                <table class="table table-striped table-hover ">
+                    <thead>
                     <tr>
                         <th>Stay Id</th>
                         <th>Booking Id</th>
                         <th>Guest</th> 
                     </tr>
-                </thead>
-                <tbody>
+                    </thead>
+                    <tbody>
                     {% for stay in stays %}
                         <tr>
                             <td><a href="{{ path('admin_stay_view', {id: stay.id}) }}"> {{ stay.id }} </a></td>
@@ -31,9 +32,10 @@
                             <td><a href="{{ path('admin_guest_view', {id: stay.guest.id}) }}"> {{ stay.guest.firstname }} {{ stay.guest.fathersName }} {{ stay.guest.lastname }} </a></td>
                         </tr>
                     {% endfor %}
-                </tbody>
-            </table>
-        </div>       
+                    </tbody>
+                </table>
+            </div>
+        {% endif %}       
     </div>
 
 {% endblock %}
