--- a/app/Resources/views/admin/stays/list.html.twig
+++ b/app/Resources/views/admin/stays/list.html.twig
@@ -4,9 +4,7 @@
 
 <div class="container body-content">
     <div class="well">
-        <h2>All Stays -
-            <a href="{{ path('admin_stay_create') }}" class="btn btn-danger">Create New</a>
-        </h2>
+        <h2>All Stays</h2>
         <div class="row">
             <table class="table table-striped table-hover">
                 <thead>
