--- a/app/Resources/views/admin/rooms/view.html.twig
+++ b/app/Resources/views/admin/rooms/view.html.twig
@@ -9,7 +9,7 @@
         <p>Description: {{ room.category.description }} </p>
         <p>
             <a class="btn btn-success btn-xs" href="{{ path('admin_room_edit', {id: room.id}) }}">Edit Room</a>
-            <a class="btn btn-danger btn-xs" href="{{ path('admin_room_delete', {id: room.id}) }}">Delete Room</a>
+            <a class="btn btn-danger btn-xs" href="{{ path('admin_room_delete', {id: room.id}) }}" onClick="return confirm('Are you sure you want to delete?')">Delete Room</a>
         </p>
         <h2>All stays for this room</h2>
         {% if stays|length == 0 %} 
