--- a/app/Resources/views/admin/bookings/edit.html.twig
+++ b/app/Resources/views/admin/bookings/edit.html.twig
@@ -11,10 +11,22 @@
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_category">Category</label>
                         <div class="col-sm-4">
-                            {{ form_widget(form.category) }}
+                            <select class="form-control" id="booking_category" name="booking[category]">
+                                {% for category in categories %}
+                                    {% if ( booking.category.id == category.id)  %}
+                                        <option selected="selected" value="{{ category.id }}">
+                                            {{ category.name }}
+                                        </option>
+                                    {% else %}
+                                        <option value="{{ category.id }}">
+                                            {{ category.name }}
+                                        </option>
+                                    {% endif %}
+                                {% endfor %}
+                           </select>
                         </div>
                     </div>
-
+                 
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_checkin">Checkin</label>
                         <div class="col-sm-4">
@@ -26,13 +38,6 @@
                         <label class="col-sm-4 control-label" for="booking_checkout">Checkout</label>
                         <div class="col-sm-4">
                             <input type="date" class="form-control" id="booking_checkout"  name="booking[checkout]"  value="{{ booking.checkout|date("Y-m-d")}}">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="booking_days">Days</label>
-                        <div class="col-sm-4">
-                            <input type="number" class="form-control" id="booking_days"  name="booking[days]" value="{{ booking.days}}">
                         </div>
                     </div>
 
@@ -53,7 +58,19 @@
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_payment">Payment</label>
                         <div class="col-sm-4">
-                            {{ form_widget(form.payment) }}
+                            <select class="form-control" id="booking_payment" name="booking[payment]">
+                                {% for payment in payments %}
+                                    {% if ( booking.payment.id == payment.id)  %}
+                                        <option selected="selected" value="{{ payment.id }}">
+                                            {{ payment.name }}
+                                        </option>
+                                    {% else %}
+                                        <option value="{{ payment.id }}">
+                                            {{ payment.name }}
+                                        </option>
+                                    {% endif %}
+                                {% endfor %}
+                           </select>
                         </div>
                     </div>
 
@@ -67,7 +84,19 @@
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_status">Status</label>
                         <div class="col-sm-4">
-                            {{ form_widget(form.status) }}
+                            <select class="form-control" id="booking_status" name="booking[status]">
+                                {% for status in statuses %}
+                                    {% if ( booking.status.id == status.id)  %}
+                                        <option selected="selected" value="{{ status.id }}">
+                                            {{ status.name }}
+                                        </option>
+                                    {% else %}
+                                        <option value="{{ status.id }}">
+                                            {{ status.name }}
+                                        </option>
+                                    {% endif %}
+                                {% endfor %}
+                           </select>
                         </div>
                     </div>
                     
