--- a/app/Resources/views/admin/categories/view.html.twig
+++ b/app/Resources/views/admin/categories/view.html.twig
@@ -12,7 +12,10 @@
                 <p>{{ category.description }}</</p>
                 <p>Beds: {{ category.beds }}</p>
                 <p>Price: {{ category.price }}
-                <p><a class="btn btn-danger btn-xs" href="{{ path('admin_categories') }}">Back &raquo;</a></p>
+                <p>
+                    <a class="btn btn-success btn-xs" href="{{ path('admin_category_edit', {id: category.id}) }}">Edit</a>
+                    <a class="btn btn-danger btn-xs"  href="{{ path('admin_category_delete', {id: category.id}) }}" onClick="return confirm('Are you sure you want to delete?')">Delete</a>
+                </p>
             </div>
         </div>
     </div
