--- a/app/Resources/views/admin/rooms/list.html.twig
+++ b/app/Resources/views/admin/rooms/list.html.twig
@@ -42,7 +42,7 @@
                         <td>
                             <a href="{{ path('admin_room_view', {id: room.id}) }}" target=_blank>View</a>
                             <a href="{{ path('admin_room_edit', {id: room.id}) }}" target=_blank>Edit</a>
-                            <a href="{{ path('admin_room_delete', {id: room.id}) }}">Delete</a>
+                            <a href="{{ path('admin_room_delete', {id: room.id}) }}" onClick="return confirm('Are you sure you want to delete?')">Delete</a>
                         </td>
                     </tr>
                 {% endfor %}
