--- a/app/Resources/views/admin/stays/list.html.twig
+++ b/app/Resources/views/admin/stays/list.html.twig
@@ -2,8 +2,7 @@
 
 {% block body %}
 
-<div class="container body-content">
-    <div class="well">
+    <div class="container body-content">
         <h2>All Stays</h2>
         <div class="row">
             <table class="table table-striped table-hover">
@@ -13,7 +12,6 @@
                     <th>Booking</th>
                     <th>Room Number</th>
                     <th>Guest</th>
-                    <th>Note</th>
                     <th>Actions</th>
                 </tr>
                 </thead>
@@ -24,11 +22,10 @@
                         <td><a href="{{ path('admin_booking_view', {id: stay.booking.id}) }}">{{ stay.booking }}</a></td>
                         <td><a href="{{ path('admin_room_view', {id: stay.room.id}) }}">{{ stay.room }}</a></td>
                         <td><a href="{{ path('admin_guest_view', {id: stay.guest.id}) }}">{{ stay.guest }}</a></td>
-                        <td>{{ stay.note }}</td>
                         <td>
                             <a href="{{ path('admin_stay_view', {id: stay.id}) }}" target=_blank>View</a>
                             <a href="{{ path('admin_stay_edit', {id: stay.id}) }}" target=_blank>Edit</a>
-                            <a href="{{ path('admin_stay_delete', {id: stay.id}) }}">Delete</a>
+                            <a href="{{ path('admin_stay_delete', {id: stay.id}) }}" onClick="return confirm('Are you sure you want to delete?')">Delete</a>
                         </td>
                     </tr>
                 {% endfor %}
@@ -36,6 +33,5 @@
             </table>
         </div>
     </div>
-</div>
 
 {% endblock %}
