--- a/app/Resources/views/admin/categories/view.html.twig
+++ b/app/Resources/views/admin/categories/view.html.twig
@@ -9,9 +9,9 @@
             </div>
             <div class="col-md-4 col-sm-12">
                 <h2>{{ category.name }}</h2>
-                <p>{{ category.description }}</</p>
+                <p>{{ category.description }}</p>
                 <p>Beds: {{ category.beds }}</p>
-                <p>Price: {{ category.price }}
+                <p>Price: {{ category.price }}</p>
                 <p>
                     <a class="btn btn-success btn-xs" href="{{ path('admin_category_edit', {id: category.id}) }}">Edit</a>
                     <a class="btn btn-danger btn-xs"  href="{{ path('admin_category_delete', {id: category.id}) }}" onClick="return confirm('Are you sure you want to delete?')">Delete</a>
