set categoryId in Booking Create

--- a/app/Resources/views/admin/bookings/list.html.twig
+++ b/app/Resources/views/admin/bookings/list.html.twig
@@ -5,9 +5,7 @@
     <div class="container body-content">
         <div class="row find-booking">
             <div class="col-md-8">
-                <h2>All Booking -
-                    <a href="{{ path('admin_booking_create') }}" class="btn btn-danger">Create Booking</a>
-                </h2>
+                <h2><a href="{{ path('admin_bookings') }}">All Bookings</a></h2>
             </div>
             <div class="col-md-4 text-center">
                 <form method="POST">
