--- a/app/Resources/views/admin/guests/list.html.twig
+++ b/app/Resources/views/admin/guests/list.html.twig
@@ -5,7 +5,8 @@
     <div class="container body-content">
         <div class="row find-guest">
             <div class="col-md-8">
-                <h2>All Guests -
+                <h2>
+                    <a href="{{ path('admin_guests') }}">All Guests</a> -
                     <a href="{{ path('admin_guest_create') }}" class="btn btn-danger">Create New</a>
                 </h2>
             </div>
