--- a/app/Resources/views/admin/rooms/list.html.twig
+++ b/app/Resources/views/admin/rooms/list.html.twig
@@ -5,7 +5,8 @@
     <div class="container body-content">
         <div class="row find-room">
             <div class="col-md-8">
-                <h2>All Rooms -
+                <h2>
+                    <a href="{{ path('admin_rooms') }}">All Rooms</a> -
                     <a href="{{ path('admin_room_create') }}" class="btn btn-danger">Create New</a>
                 </h2>
             </div>
