--- a/app/Resources/views/admin/stays/list.html.twig
+++ b/app/Resources/views/admin/stays/list.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
     <div class="container body-content">
-        <h2>All Stays</h2>
+        <h2><a href="{{ path('admin_stays') }}">All Stays</a></h2>
         <div class="row">
             <table class="table table-striped table-hover">
                 <thead>
