--- a/app/Resources/views/categories/view.html.twig
+++ b/app/Resources/views/categories/view.html.twig
@@ -15,7 +15,7 @@
                 <h2>{{ category.name }}</h2>
                 <p>{{ category.description }}</p>
                 <p>Beds: {{ category.beds }}</p>
-                <p>Price: {{ category.price }}</p>
+                <p>Price: ${{ category.price }}</p>
             </div>
         </div>
     </div>
