--- a/app/Resources/views/admin/categories/list.html.twig
+++ b/app/Resources/views/admin/categories/list.html.twig
@@ -4,7 +4,8 @@
 
 <div class="container body-content">
     <div class="well">
-        <h2>All Categories -
+        <h2>
+            <a href="{{ path('admin_categories') }}">All Categories</a> -
             <a href="{{ path('admin_category_create') }}" class="btn btn-danger">Create New</a>
         </h2>
         <div class="row">
