--- a/app/Resources/views/admin/users/list.html.twig
+++ b/app/Resources/views/admin/users/list.html.twig
@@ -3,18 +3,17 @@
 {% block body %}
 
     <div class="container body-content">
-        <div class="well">
-            <h2>All Users</h2>
-            <div class="row">
-                <table class="table table-striped table-hover ">
-                    <thead>
+        <h2><a href="{{ path('admin_users') }}">All Users</a></h2>
+        <div class="row">
+            <table class="table table-striped table-hover ">
+                <thead>
                     <tr>
                         <th>#</th>
                         <th>Email</th>
                         <th>Login Name</th>
                     </tr>
-                    </thead>
-                    <tbody>
+                </thead>
+                <tbody>
                     {% for user in users %}
                         <tr>
                         <tr {% if user.isAdmin() %} class="tr-admin" {% endif %}>
@@ -23,9 +22,8 @@
                             <td>{{ user.loginName}}</td>
                         </tr>
                     {% endfor %}
-                    </tbody>
-                </table>
-            </div>
+                </tbody>
+            </table>
         </div>
     </div>
     
