--- a/app/Resources/views/admin/categories/view.html.twig
+++ b/app/Resources/views/admin/categories/view.html.twig
@@ -3,11 +3,13 @@
 {% block body %}
 
     <div class="container body-content">
+        
+        
         <div class="row">
             <div class="col-md-4 col-sm-12">
                 <img src="{{ asset('uploads/images/categories/' ~ category.image)}}" alt="img" class="img-thumbnail">
             </div>
-            <div class="col-md-4 col-sm-12">
+            <div class="col-md-6 col-sm-12">
                 <h2>{{ category.name }}</h2>
                 <p>{{ category.description }}</p>
                 <p>Beds: {{ category.beds }}</p>
@@ -16,6 +18,10 @@
                     <a class="btn btn-success btn-xs" href="{{ path('admin_category_edit', {id: category.id}) }}">Edit</a>
                     <a class="btn btn-danger btn-xs"  href="{{ path('admin_category_delete', {id: category.id}) }}" onClick="return confirm('Are you sure you want to delete?')">Delete</a>
                 </p>
+                <h2>Rooms numbers for this category</h2>
+                {% for room in rooms %}
+                    <p>{{ room.number }}</p>
+                {% endfor %}
             </div>
         </div>
     </div
