--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,6 +6,7 @@
     <title>{% block title %}Hotel & SPA{% endblock %}</title>
     {% block stylesheets %}
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/solid.css">
+        <link rel="stylesheet" href="{{ asset('font-awesome/css/font-awesome.css') }}">
         <link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}">
         <link rel="stylesheet" href="{{ asset('css/custom.css') }}">
     {% endblock %}
