BookingController.php: remove  public function create(int $id), edit admin/bookings/view.html.twig

--- a/app/Resources/views/admin/bookings/list.html.twig
+++ b/app/Resources/views/admin/bookings/list.html.twig
@@ -11,8 +11,8 @@
                 <form method="POST">
                     <div class="row">
                         <div class="col-md-7">
-                            <input type="text" class="icon-find" name="statusId" placeholder="&#xF002; Enter status" />
-                            <p>Please, enter status!</p>
+                            <input type="text" class="icon-find" name="id" placeholder="&#xF002; Enter booking id" />
+                            <p>Please, enter number!</p>
                         </div>
                         <div class="col-md-5">
                             <button type="submit" class="btn btn-danger">Find Booking</button>
