--- a/app/Resources/views/users/myBookings.html.twig
+++ b/app/Resources/views/users/myBookings.html.twig
@@ -5,9 +5,7 @@
     <div class="container body-content">
         <h4>User: {{ app.user.loginName }}</h4>
         <div class="well">
-            <h2>All Booking -
-                <a href="{{ path('user_booking_create') }}" class="btn btn-danger">Create New</a>
-            </h2>
+            <h2>All Bookings</h2>
             <div class="row">
                 <table class="table table-striped table-hover ">
                     <thead>
