--- a/app/Resources/views/admin/bookings/view.html.twig
+++ b/app/Resources/views/admin/bookings/view.html.twig
@@ -3,14 +3,29 @@
 {% block body %}
 
     <div class="container body-content text-center">
-        <h2>Booking Information [status: {{ booking.status.name }}]</h2>
-        <p>Reserved by email <span class="cl-bold"> {{ booking.userId.email}} </span> on <span class="cl-bold"> {{ booking.dateAdded|date("Y-m-d H:i:s") }} </span></p>
-        <p>Checkin: {{ booking.checkin|date("Y-m-d") }} | Checkout: {{ booking.checkout|date("Y-m-d") }} | {{ booking.days }} day(s)</p>
-        <p>Payment: {{ booking.payment.name }}</p>
-        <p>Total Amount: ${{ booking.totalAmount}} | Paid Amount: ${{ booking.paidAmount}} | Payment Amount: ${{ booking.paymentAmount}}</p>
-        <p>Category: <span class="cl-bold"> {{ booking.category.name }} </span></p>
-        <p>Adults: <span class="cl-bold"> {{ booking.adults}} </span> <span class="icon-find"> {% for i in 1..booking.adults %} {{ "&#xf007;" }} {% endfor %} </span></p>
-        <p>Child Bed: <span class="cl-bold"> {{ booking.childBed}} </span></p>
+    
+        <h2>Booking Details [ #{{ booking.id }} ]</h2>
+        <p>
+            Reserved by email <span class="cl-bold"> {{ booking.userId.email}} </span>
+            on <span class="cl-bold"> {{ booking.dateAdded|date("Y-m-d H:i:s") }} </span>
+        </p>
+        <p>
+            Checkin: <span class="cl-bold"> {{ booking.checkin|date("Y-m-d") }} </span> | 
+            Checkout: <span class="cl-bold"> {{ booking.checkout|date("Y-m-d") }} </span> | 
+            <span class="cl-bold"> {{ booking.days }} day(s) </span></p>
+        <p>
+            Status: <span class="cl-bold"> {{ booking.status.name }} </span> | 
+            Payment: <span class="cl-bold"> {{ booking.payment.name }} </span>
+        </p>
+        <p>
+            Total Amount: <span class="cl-bold"> ${{ booking.totalAmount}} </span> | 
+            Paid Amount: <span class="cl-bold"> ${{ booking.paidAmount}} </span> | 
+            Payment Amount: <span class="cl-bold"> ${{ booking.paymentAmount}} </span>
+        </p>
+        <p>
+            Category: <span class="cl-bold"> {{ booking.category.name }} </span> |
+            Adults: <span class="icon-find"> {% for i in 1..booking.adults %} {{ "&#xf007;" }} {% endfor %} </span> |
+            Child Bed: <span class="cl-bold"> {{ booking.childBed}} </span></p>
         <p>
             <a class="btn btn-success btn-xs" href="{{ path('admin_booking_edit', {id: booking.id}) }}">Edit Booking</a>
             <a class="btn btn-danger btn-xs" href="{{ path('admin_booking_delete', {id: booking.id}) }}" onClick="return confirm('Are you sure you want to delete?')">Delete Booking</a>
@@ -47,7 +62,8 @@
                     </tbody>
                 </table>
             </div>
-        {% endif %}       
+        {% endif %} 
+      
     </div>
     
     <script>
