--- a/app/Resources/views/users/createBooking.html.twig
+++ b/app/Resources/views/users/createBooking.html.twig
@@ -4,31 +4,30 @@
 
     <div class="container body-content">
         <div class="well">
-            <form class="form-horizontal" action="{{ path('user_booking_create') }}" method="post">
+            <form class="form-horizontal" action="{{ path('user_booking_create', {id: category.id}) }}" method="post">
                 <fieldset>
-                    <legend>Create Booking</legend>
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="booking_category">Category</label>
-                        <div class="col-sm-4">
-                            {{ form_widget(form.category) }}
-                        </div>
-                    </div>
+                    <legend>Create Booking - {{ category.name }}</legend>
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_checkin">Checkin</label>
                         <div class="col-sm-4 ">
-                            <input type="date" class="form-control" id="booking_checkin"  name="booking[checkin]" required>
+                            <input type="date" class="form-control" id="booking_checkin"  name="booking[checkin]" value="{{ "now"|date('Y-m-d') }}" />
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_checkout">Checkout</label>
                         <div class="col-sm-4 ">
-                            <input type="date" class="form-control" id="booking_checkout"  name="booking[checkout]" required>
+                            <input type="date" class="form-control" id="booking_checkout"  name="booking[checkout]" value="{{ "now"|date_modify('+1 day')|date('Y-m-d') }}" />
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_adults">Adults</label>
                         <div class="col-sm-4 ">
-                            <input type="number" class="form-control" id="booking_adults"  name="booking[adults]" required>
+                            <select class="form-control" id="booking_adults" name="booking[adults]">
+                                <option value="">Choises</option>
+                                {% for i in 1..category.beds %}
+                                    <option value="{{ i }}">{{ i }}</option>
+                                {% endfor %}
+                           </select>
                         </div>
                     </div>
                     <div class="form-group">
@@ -40,7 +39,14 @@
                     <div class="form-group">
                         <label class="col-sm-4 control-label" for="booking_payment">Payment</label>
                         <div class="col-sm-4">
-                            {{ form_widget(form.payment) }}
+                            <select class="form-control" id="booking_payment" name="booking[payment]">
+                                <option value="">Choises</option
+                                {% for payment in payments %}
+                                        <option value="{{ payment.id }}">
+                                            {{ payment.name }}
+                                        </option>
+                                {% endfor %}
+                           </select>
                         </div>
                     </div>
                     <div class="form-group">
