--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -3,31 +3,35 @@
 {% block body %}
 
     <div class="container body-content">
-        <div class="well">
-            <form name="authenticate" class="form-horizontal" action="{{ path('security_login') }}" method="post">
-                <fieldset>
-                    <legend>Login</legend>
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="user_email">Email</label>
-                        <div class="col-sm-4 ">
-                            <input type="email" class="form-control" id="user_email" placeholder="Email" name="_username">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="password">Password</label>
-                        <div class="col-sm-4">
-                            <input type="password" class="form-control" id="password" placeholder="Password" name="_password">
-                        </div>
-                    </div>
-                    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"/>
-                    <div class="form-group">
-                        <div class="col-sm-4 col-sm-offset-4">
-                            <button type="submit" class="btn btn-danger">Login</button>
-                            <a class="login-a" href="{{ path('user_register') }}">Register</a>
-                        </div>
-                    </div>
-                </fieldset>
-            </form>
+        <div class="row">
+            <div class="col-sm-6 offset-sm-3">
+                <div class="well">
+                    <form name="authenticate" class="form-horizontal" action="{{ path('security_login') }}" method="post">
+                        <fieldset>
+                            <legend>Login</legend>
+                            <div class="form-group">
+                                <label class="col-sm-12 control-label" for="user_email">Email</label>
+                                <div class="col-sm-12">
+                                    <input type="email" class="form-control" id="user_email" placeholder="Email" name="_username">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-12 control-label" for="password">Password</label>
+                                <div class="col-sm-12">
+                                    <input type="password" class="form-control" id="password" placeholder="Password" name="_password">
+                                </div>
+                            </div>
+                            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"/>
+                            <div class="form-group">
+                                <div class="col-sm-12">
+                                    <a class="login-a" href="{{ path('user_register') }}">Register</a>
+                                    <button type="submit" class="btn btn-danger">Login</button>
+                                </div>
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
     
