--- a/app/Resources/views/users/createBooking.html.twig
+++ b/app/Resources/views/users/createBooking.html.twig
@@ -3,60 +3,65 @@
 {% block body %}
 
     <div class="container body-content">
-        <div class="well">
-            <form class="form-horizontal" action="{{ path('user_booking_create', {id: category.id}) }}" method="post">
-                <fieldset>
-                    <legend>Create Booking - {{ category.name }}</legend>
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="booking_checkin">Checkin</label>
-                        <div class="col-sm-4 ">
-                            <input type="date" class="form-control" id="booking_checkin"  name="booking[checkin]" value="{{ "now"|date('Y-m-d') }}" />
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="booking_checkout">Checkout</label>
-                        <div class="col-sm-4 ">
-                            <input type="date" class="form-control" id="booking_checkout"  name="booking[checkout]" value="{{ "now"|date_modify('+1 day')|date('Y-m-d') }}" />
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="booking_adults">Adults</label>
-                        <div class="col-sm-4 ">
-                            <select class="form-control" id="booking_adults" name="booking[adults]">
-                                <option value="">Choises</option>
-                                {% for i in 1..category.beds %}
-                                    <option value="{{ i }}">{{ i }}</option>
-                                {% endfor %}
-                           </select>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="booking_adults">Child Bed</label>
-                        <div class="col-sm-4 ">
-                            <input type="number" class="form-control" id="booking_childBed"  name="booking[childBed]" required>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="booking_payment">Payment</label>
-                        <div class="col-sm-4">
-                            <select class="form-control" id="booking_payment" name="booking[payment]">
-                                <option value="">Choises</option
-                                {% for payment in payments %}
-                                        <option value="{{ payment.id }}">
-                                            {{ payment.name }}
-                                        </option>
-                                {% endfor %}
-                           </select>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-sm-4">
-                            <button type="submit" class="btn btn-danger">Submit</button>
-                        </div>
-                    </div>
-                    {{ form_row(form._token) }}
-                </fieldset>
-            </form>
+        <div class="row">
+            <div class="col-sm-6 offset-sm-3">
+                <div class="well">
+                    <form class="form-horizontal" action="{{ path('user_booking_create', {id: category.id}) }}" method="post">
+                        <fieldset>
+                            <legend>Create Booking - {{ category.name }}</legend>
+                            <div class="form-group">
+                                <label class="col-sm-12 control-label" for="booking_checkin">Checkin</label>
+                                <div class="col-sm-12">
+                                    <input type="date" class="form-control" id="booking_checkin"  name="booking[checkin]" value="{{ "now"|date('Y-m-d') }}" />
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-12 control-label" for="booking_checkout">Checkout</label>
+                                <div class="col-sm-12">
+                                    <input type="date" class="form-control" id="booking_checkout"  name="booking[checkout]" value="{{ "now"|date_modify('+1 day')|date('Y-m-d') }}" />
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-12 control-label" for="booking_adults">Adults</label>
+                                <div class="col-sm-12">
+                                    <select class="form-control" id="booking_adults" name="booking[adults]">
+                                        <option value="">Choises</option>
+                                        {% for i in 1..category.beds %}
+                                            <option value="{{ i }}">{{ i }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-12 control-label" for="booking_adults">Child Bed</label>
+                                <div class="col-sm-12">
+                                    <input type="number" class="form-control" id="booking_childBed"  name="booking[childBed]" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-12 control-label" for="booking_payment">Payment</label>
+                                <div class="col-sm-12">
+                                    <select class="form-control" id="booking_payment" name="booking[payment]">
+                                        <option value="">Choises</option
+                                        {% for payment in payments %}
+                                            <option value="{{ payment.id }}">
+                                                {{ payment.name }}
+                                            </option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-12">
+                                    <a class="cancel-a" href="{{ path('hotel_index') }}">Cancel</a>
+                                    <button type="submit" class="btn btn-danger">Submit</button>
+                                </div>
+                            </div>
+                            {{ form_row(form._token) }}
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
     
